# GarCide

./: .gitignore  2 1 2 1 2 1  ?  CMakeLists.txt  README.md  output
doc/: Garside.md  header.html  implementing_garside_groups.md  main_page.dox
inc/braiding/: braiding.h  braiding.hpp  braiding_option.h  braiding_option.hpp
inc/garcide/: centralizer.h  centralizer.hpp  garcide.h  garcide.hpp  sliding_circuits.h  sliding_circuits.hpp  super_summit.h  super_summit.hpp  ultra_summit.h  ultra_summit.hpp  utility.hpp
inc/garcide/groups/: artin.h  artin.hpp  band.h  band.hpp  dihedral.h  dihedral.hpp  dual_complex.h  dual_complex.hpp  euclidean_lattice.h  euclidean_lattice.hpp  octahedral.h  octahedral.hpp  standard_complex.h  standard_complex.hpp
include/: artin.h  artin_braid.h  band.h  band_braid.h  braiding.h  braiding.txt  braiding_option.h  cbraid.h  cbraid_implementation.h  cbraid_interface.h  centralizer.h  cgarside.h  dihedral.h  dihedral_braid.h  dual_complex.h  dual_complex_reflection.h  euclidean_lattice.h  garsidebraiding.h  garsidesc.h  garsidesss.h  garsideuss.h  octaedral_braid.h  octahedral.h  octahedral_braid.h  old_braiding.h  optarg.h  sliding_circuits.h  standard_complex.h  standard_complex_reflection.h  super_summit.h  timecounter.h  utility.h  z_n.h
lib/: CMakeLists.txt  Makefile  artin.cpp  artin_braid.cpp  band.cpp  band_braid.cpp  braiding.cpp  cbraid.cpp  cgarside.cpp  dihedral.cpp  dihedral_braid.cpp  dual_complex.cpp  dual_complex_reflection.cpp  octaedral_braid.cpp  octahedral.cpp  octahedral_braid.cpp  standard_complex_reflection.cpp  utility.cpp
lib/garcide/: utility.cpp
lib/garcide/groups/: artin.cpp  band.cpp  dihedral.cpp  dual_complex.cpp  euclidean_lattice.cpp  octahedral.cpp  standard_complex.cpp
programs/: Makefile  braiding_main.cpp  compare_test.cpp
src/: CMakeLists.txt  Makefile  braiding.cpp  braiding_main.cpp
